--- a/Nomad/Nomad/Info.plist
+++ b/Nomad/Nomad/Info.plist
@@ -24,6 +24,10 @@
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We need your location to track when you start/end a trip and add entries to create your trip map</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>basictitlefont.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -31,6 +35,8 @@
 		<string>location-services</string>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
